[gd_scene load_steps=12 format=2]

[ext_resource path="res://themes/new_gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/gui/Screens.gd" type="Script" id=2]
[ext_resource path="res://scenes/gui/Labels/TitleText.tscn" type="PackedScene" id=3]
[ext_resource path="res://ubuntu-font-family/UbuntuMono-R.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/gui/Version.gd" type="Script" id=5]
[ext_resource path="res://scenes/gui/QuickMenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/gui/SlotBox.gd" type="Script" id=7]
[ext_resource path="res://ubuntu-font-family/Ubuntu-B.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/gui/Labels/slot.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Screens" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Focus", "Material", "Mouse", "Size Flags", "Theme", "Visibility" ]

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1027.0
margin_bottom = 609.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MainMenuDecorations" type="Control" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TitleNVersion" type="Control" parent="MainMenuDecorations" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="HBox" type="HBoxContainer" parent="MainMenuDecorations/TitleNVersion" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 826.0
margin_top = 526.0
margin_right = 977.0
margin_bottom = 620.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Title" parent="MainMenuDecorations/TitleNVersion/HBox" index="0" instance=ExtResource( 3 )]

margin_top = 14.0
margin_right = 99.0
margin_bottom = 79.0

[node name="Version" type="Label" parent="MainMenuDecorations/TitleNVersion/HBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 103.0
margin_top = 34.0
margin_right = 151.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "0.3.0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 5 )
_sections_unfolded = [ "custom_fonts" ]

[node name="Navigation" type="Panel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 204.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Label" parent="Navigation" index="0" instance=ExtResource( 3 )]

margin_right = 99.0
margin_bottom = 65.0
align = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 140.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0

[node name="Start" parent="Navigation/VBoxContainer" index="0" instance=ExtResource( 6 )]

margin_right = 140.0
margin_bottom = 34.0
text = "Start"
align = 0

[node name="History" parent="Navigation/VBoxContainer" index="1" instance=ExtResource( 6 )]

visible = false
margin_top = 54.0
margin_right = 140.0
margin_bottom = 88.0
text = "History"
align = 0

[node name="Load" parent="Navigation/VBoxContainer" index="2" instance=ExtResource( 6 )]

margin_top = 54.0
margin_right = 140.0
margin_bottom = 88.0
text = "Load"
align = 0

[node name="Save" parent="Navigation/VBoxContainer" index="3" instance=ExtResource( 6 )]

visible = false
margin_top = 108.0
margin_right = 140.0
margin_bottom = 142.0
text = "Save"
align = 0

[node name="Preferences" parent="Navigation/VBoxContainer" index="4" instance=ExtResource( 6 )]

margin_top = 108.0
margin_right = 140.0
margin_bottom = 142.0
text = "Preferences"
align = 0

[node name="About" parent="Navigation/VBoxContainer" index="5" instance=ExtResource( 6 )]

margin_top = 162.0
margin_right = 140.0
margin_bottom = 196.0
text = "About"
align = 0

[node name="Help" parent="Navigation/VBoxContainer" index="6" instance=ExtResource( 6 )]

margin_top = 216.0
margin_right = 140.0
margin_bottom = 250.0
text = "Help"
align = 0

[node name="Quit" parent="Navigation/VBoxContainer" index="7" instance=ExtResource( 6 )]

margin_top = 270.0
margin_right = 140.0
margin_bottom = 304.0
text = "Quit"
align = 0

[node name="Return" parent="Navigation" index="2" instance=ExtResource( 6 )]

visible = false
margin_top = 532.0
margin_right = 85.0
margin_bottom = 566.0
text = "Return"
align = 0

[node name="SlotBox" type="VBoxContainer" parent="." index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 36.0
margin_right = 959.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 7 )
_sections_unfolded = [ "Size Flags" ]

[node name="Title" type="Label" parent="SlotBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 702.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Save/Load"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="GridContainer" type="GridContainer" parent="SlotBox" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 702.0
margin_bottom = 509.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
_sections_unfolded = [ "Grow Direction", "Rect", "Size Flags" ]

[node name="1" parent="SlotBox/GridContainer" index="0" instance=ExtResource( 9 )]

margin_right = 231.0
margin_bottom = 223.0

[node name="2" parent="SlotBox/GridContainer" index="1" instance=ExtResource( 9 )]

margin_left = 235.0
margin_right = 466.0
margin_bottom = 223.0

[node name="3" parent="SlotBox/GridContainer" index="2" instance=ExtResource( 9 )]

margin_left = 470.0
margin_right = 701.0
margin_bottom = 223.0

[node name="4" parent="SlotBox/GridContainer" index="3" instance=ExtResource( 9 )]

margin_top = 227.0
margin_right = 231.0
margin_bottom = 450.0

[node name="5" parent="SlotBox/GridContainer" index="4" instance=ExtResource( 9 )]

margin_left = 235.0
margin_top = 227.0
margin_right = 466.0
margin_bottom = 450.0

[node name="6" parent="SlotBox/GridContainer" index="5" instance=ExtResource( 9 )]

margin_left = 470.0
margin_top = 227.0
margin_right = 701.0
margin_bottom = 450.0

[connection signal="visibility_changed" from="." to="." method="_on_Screens_visibility_changed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Navigation/VBoxContainer/Load" to="." method="_on_Load_pressed"]

[connection signal="pressed" from="Navigation/Return" to="." method="_on_Return_pressed"]


